# Afterglow

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  rust.yml
assets/: dev.bigboot.afterglow.desktop
src/: app.rs  config.rs  main.rs  style.rs
src/app/: state.rs  tasks.rs
src/gui/: mod.rs  scroll.rs  styles.rs
src/gui/components/: game_list.rs  image_preview.rs  mod.rs
src/gui/views/: dashboard.rs  settings.rs
src/lutris/: database.rs  mod.rs  paths.rs
src/sources/: mod.rs  traits.rs
src/sources/steamgriddb/: api.rs  boop.rs  mod.rs  models.rs
src/utils/: image_loader.rs  image_processing.rs  mod.rs
